kubernetes/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shoe-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shoe-frontend
  template:
    metadata:
      labels:
        app: shoe-frontend
    spec:
      containers:
      - name: frontend
        image: mydevopsacr123.azurecr.io/frontend:latest
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /health.html
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health.html
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 5
