kubernetes/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shoe-frontend
  labels:
    app: shoe-frontend
spec:
  type: ClusterIP
  selector:
    app: shoe-frontend
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
