kubernetes/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shoe-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
    appgw.ingress.kubernetes.io/health-probe-path: "/"
spec:
  rules:
  - host: dev.microservices.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shoe-frontend
            port:
              number: 80
